dataset1235/2025-2/2318198438/users/1018361269/executions/1897677159_1626817775.log
== RUN (2025-08-26 01:20:05)
-- CODE: 
from math import pi

print(pi)

# Teste seu codigo aos poucos.
#raio=float(input("raio?"))
#area= 

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
3.141592653589793
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
3.141592653589793
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
3.141592653589793
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
3.141592653589793
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
3.141592653589793
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:23:22)
-- CODE: 
from math import pi


# Teste seu codigo aos poucos.
raio=float(input("raio?"))
area= pi*raio**2
vo=4/3*pi*raio**3

print(round(area,3))
print(round(vo,3))

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:19:49)
-- CODE: 
from math import sum, pi

print(pi())

# Teste seu codigo aos poucos.
#raio=float(input("raio?"))
#area= 

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import sum, pi
ImportError: cannot import name 'sum' from 'math' (unknown location)
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import sum, pi
ImportError: cannot import name 'sum' from 'math' (unknown location)
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import sum, pi
ImportError: cannot import name 'sum' from 'math' (unknown location)
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import sum, pi
ImportError: cannot import name 'sum' from 'math' (unknown location)
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import sum, pi
ImportError: cannot import name 'sum' from 'math' (unknown location)
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import sum, pi
ImportError: cannot import name 'sum' from 'math' (unknown location)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:19:55)
-- CODE: 
from math import pi

print(pi())

# Teste seu codigo aos poucos.
#raio=float(input("raio?"))
#area= 

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:22:27)
-- CODE: 
from math import pi


# Teste seu codigo aos poucos.
raio=float(input("raio?"))
area= pi*raio**2
vo=4/3*pi*raio**3

print(area)
print(vo)

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004188790204786391
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.7035074111598
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.075684676355
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.279762570686
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.1508659336
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.510321638291124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:20:00)
-- CODE: 
from math import pi

print(pi

# Teste seu codigo aos poucos.
#raio=float(input("raio?"))
#area= 

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    print(pi
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    print(pi
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    print(pi
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    print(pi
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    print(pi
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    print(pi
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
